# miniso-ai-decision-engine

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-docs.txt  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  pages.yml
artifacts/demo/: metrics.json
data/sample/: README.md
docs/: 00_评委快速指南.md  07_安全治理与生产化.md  08_架构决策记录.md  README.md
docs/00_用户真实反馈洞察/: DATA_ETHICS.md  README.md  SHA256SUMS.txt
docs/00_用户真实反馈洞察/data/: miniso_voc_codebook.csv  (+4 more)
docs/01_行业分析报告/: README.md  index.html  report-text.md
docs/02_技术白皮书/: AI产品开发引擎技术白皮书.md  README.md
docs/03_回测实验报告/: README.md
docs/04_进化式创意引擎/: README.md
docs/05_Demo演示/: README.md
docs/06_参考文献/: README.md
notebooks/: README.md
output/docx/: AI产品开发引擎技术白皮书.docx
scripts/: build_whitepaper.py  run_backtest.py  setup_env.bat  setup_env.sh  upload_to_github.py
site/: README.md  THIRD_PARTY_NOTICES.md  app.js  data.js  index.html  styles.css
site/assets/: backtest_summary.csv
src/agents/: __init__.py  base.py  creative_agent.py  json_utils.py  orchestrator.py  review_agent.py  trend_agent.py
src/analysis/: __init__.py  granger.py
src/backtest/: __init__.py  engine.py  metrics.py  predictors.py
src/evolution/: __init__.py  engine.py
src/llm/: __init__.py  client.py
src/panel/: __init__.py  calibration.py
src/pipeline/: data_generator.py  run_all.py
tests/: test_agents_and_data.py  test_backtest.py  test_calibration.py  test_evolution.py  test_metrics.py  test_site.py
(+7 files in other folders)
