[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "miniso-ai-decision-engine"
version = "0.2.3"
description = "Leakage-aware AI product development decision engine demonstration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AI Pioneer Future Talent Competition Three-Student Team" }]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<4",
  "scikit-learn>=1.4,<2",
  "scipy>=1.11,<2",
  "statsmodels>=0.14,<1",
  "matplotlib>=3.8,<4",
  "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["tmp", "output"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
